--- a/view/main-category.ejs
+++ b/view/main-category.ejs
@@ -12,13 +12,13 @@
         <td><%= category.categoryName %></td>
         <td>
           <a
-            href="/updateCate/<%= category.id %>"
+            href="/updateCate/<%= category.categoryId %>"
             type="button"
             class="btn btn-light btn-small"
             ><i class="bi bi-pen-fill"></i> Edit
           </a>
           <a
-            href="/category/<%= category.id %>"
+            href="/category/<%= category.categoryId %>"
             type="button"
             class="btn btn-light btn-small"
             ><i class="bi bi-trash-fill"></i> Delete
