--- a/view/add-book.ejs
+++ b/view/add-book.ejs
@@ -1,4 +1,15 @@
 <div class="container">
+  <% if (alert) { %>
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <%= alert %>
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    ></button>
+  </div>
+  <% } %>
   <form
     method="POST"
     action="/addBook"
