--- a/view/components/book-form.ejs
+++ b/view/components/book-form.ejs
@@ -42,7 +42,9 @@
   <div class="col-8">
     <select name="category" id="category" class="form-select">
       <% categories.forEach(category => { %>
-      <option value="<%= category.id %>"><%= category.category_name %></option>
+      <option value="<%= category.categoryId %>">
+        <%= category.categoryName %>
+      </option>
       <% }) %>
     </select>
   </div>
