--- a/view/index.ejs
+++ b/view/index.ejs
@@ -16,19 +16,17 @@
       <div class="left-content">
         <h3><%= book.bookTitle %></h3>
         <p><%= book.bookAuthor %></p>
-        <p>Stock: <%= book.bookStock %></p>
-        <a href="/viewbook/<%= book.bookID %>" class="btn btn-primary"
-          >Details</a
-        >
+        <p>Stock: <%= book.stock %></p>
+        <a href="#" class="btn btn-primary">Details</a>
       </div>
       <div class="right-content">
         <p>฿ <%= book.bookPrice %></p>
         <p>฿ <%= book.bookPromo %></p>
         <div class="btn-groups">
-          <a href="/updatebook/<%= book.bookID %>" class="btn btn-primary"
+          <a href="/updatebook/<%= book.bookId %>" class="btn btn-primary"
             >Update</a
           >
-          <a href="/<%= book.bookID %>" class="btn btn-primary">Delete</a>
+          <a href="/<%= book.bookId %>" class="btn btn-primary">Delete</a>
         </div>
       </div>
     </div>
