--- a/view/components/navigation.ejs
+++ b/view/components/navigation.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-light">
   <div class="container">
-    <a class="navbar-brand" href="/">Bookie</a>
+    <a class="navbar-brand" href="/main">Bookie</a>
     <button
       class="navbar-toggler"
       type="button"
