--- a/view/login.ejs
+++ b/view/login.ejs
@@ -18,7 +18,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="/index.js"></script>
     <style>
       body {
         height: 100vh;
@@ -37,33 +36,57 @@
   <body>
     <div class="center-container">
       <div class="container d-flex justify-content-center mt-5">
-        <img src="public/images/brandName.png" alt="Brand Logo">
+        <img src="/images/brandName.png" alt="Brand Logo" />
       </div>
       <div class="container d-flex justify-content-center mt-5">
-        <h1> LOGIN</h1>
+        <h1>LOGIN</h1>
       </div>
-      <div class="container d-flex justify-content-center  align-items-center  mx-auto my-5" >
-        <form action="/categories" method="get">
+      <div
+        class="container d-flex justify-content-center align-items-center mx-auto my-5"
+      >
+        <form action="/" method="post">
           <div class="row mb-3">
-            <label for="inputEmail3" class="col-sm-4 col-form-label fs-4 text">Username</label>
+            <label for="inputEmail3" class="col-sm-4 col-form-label fs-4 text"
+              >Username</label
+            >
             <div class="col-sm-7 mt-2">
-              <input type="email" class="form-control" id="inputEmail3" style="background-color: #BAB9FD;">
+              <input
+                type="text"
+                class="form-control"
+                id="inputEmail3"
+                style="background-color: #bab9fd"
+                name="username"
+              />
             </div>
           </div>
           <div class="row mb-3">
-            <label for="inputPassword3" class="col-sm-4 col-form-label fs-4 text">Password</label>
+            <label
+              for="inputPassword3"
+              class="col-sm-4 col-form-label fs-4 text"
+              >Password</label
+            >
             <div class="col-sm-7 mt-2">
-              <input type="password" class="form-control" id="inputPassword3" style="background-color: #BAB9FD">
+              <input
+                type="password"
+                class="form-control"
+                id="inputPassword3"
+                style="background-color: #bab9fd"
+                name="password"
+              />
             </div>
           </div>
-          <div class="d-flex justify-content-center  align-items-center p-2">
-            <button class="btn loginbtn" style="background-color: #3D388B;color: white;width:100px;">Login</button>
+          <div class="d-flex justify-content-center align-items-center p-2">
+            <button
+              type="submit"
+              class="btn loginbtn"
+              style="background-color: #3d388b; color: white; width: 100px"
+            >
+              Login
+            </button>
           </div>
         </form>
       </div>
     </div>
-
-    <script src="/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -74,6 +97,5 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-  
   </body>
 </html>
