--- a/view/components/navigation.ejs
+++ b/view/components/navigation.ejs
@@ -73,7 +73,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">History</a>
+          <a class="nav-link" href="/billHistory">History</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/">Logout</a>
