--- a/view/components/navigation.ejs
+++ b/view/components/navigation.ejs
@@ -76,7 +76,7 @@
           <a class="nav-link" href="/billHistory">History</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">Logout</a>
+          <a class="nav-link" href="/logout">Logout</a>
         </li>
       </ul>
     </div>
