--- a/view/components/navigation.ejs
+++ b/view/components/navigation.ejs
@@ -72,9 +72,24 @@
             <li><a class="dropdown-item" href="/addBook">Add Book</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/billHistory">History</a>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            History
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="/billHistory">Bill History</a>
+            </li>
+            <li><a class="dropdown-item" href="/bestSeller">Best Seller</a></li>
+          </ul>
         </li>
+       
         <li class="nav-item">
           <a class="nav-link" href="/">Logout</a>
         </li>
