--- a/view/index.ejs
+++ b/view/index.ejs
@@ -1,4 +1,4 @@
-<div class="home-container mb-5">
+<div class="home-container ">
   <% books.forEach(book => { %>
   <div class="book-card">
     <div class="card-img">
